src/Reader.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from .\Reader.y
-----------------------------------------------------------------------------

state 53 contains 1 shift/reduce conflicts.

terminal module is unused
terminal '+' is unused
terminal '*' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_read -> Program                             (0)
	Program -> Statement                               (1)
	Program -> Statement sep Program                   (2)
	Statement -> Declaration                           (3)
	Statement -> Rule                                  (4)
	Declaration -> const TermSequence ':' Term         (5)
	Declaration -> var TermSequence ':' Term           (6)
	Declaration -> let Term ':' Crosses arrow Term     (7)
	Declaration -> let Term '=' Term                   (8)
	Declaration -> params TermSequence                 (9)
	Declaration -> order Term Term ':' Term            (10)
	Rule -> Conj arrow bottom                          (11)
	Rule -> Conj arrow Conj                            (12)
	Rule -> Conj iff Conj                              (13)
	Rule -> Conj                                       (14)
	Comparison -> '<'                                  (15)
	Comparison -> '>'                                  (16)
	Comparison -> '='                                  (17)
	Conj -> Literal                                    (18)
	Conj -> Polyadic                                   (19)
	Conj -> Polyadic ',' Conj                          (20)
	Conj -> Literal ',' Conj                           (21)
	Polyadic -> TermSequence '|' '{' LiteralSequence '}'   (22)
	LiteralSequence -> Literal                         (23)
	LiteralSequence -> Literal ',' LiteralSequence     (24)
	Literal -> not Atom                                (25)
	Literal -> Atom                                    (26)
	Atom -> Term '(' TermSequence ')'                  (27)
	Atom -> Term Comparison Term                       (28)
	TermSequence -> Term                               (29)
	TermSequence -> TermSequence ',' Term              (30)
	Crosses -> Term                                    (31)
	Crosses -> Crosses ';' Term                        (32)
	Term -> Term '.' Term                              (33)
	Term -> Term '[' TermSequence ']'                  (34)
	Term -> leaf                                       (35)
	Term -> '(' Term ')'                               (36)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	leaf           { Parser.TokenLeaf $$ }
	not            { Parser.TokenNot }
	arrow          { Parser.TokenArrow }
	iff            { Parser.TokenIff }
	bottom         { Parser.TokenBottom }
	const          { Parser.TokenConstant }
	var            { Parser.TokenVariable }
	let            { Parser.TokenLet }
	module         { Parser.TokenModule }
	params         { Parser.TokenParameters }
	sep            { Parser.TokenSeparator }
	order          { Parser.TokenOrder }
	'|'            { Parser.TokenQuantify }
	':'            { Parser.TokenColon }
	';'            { Parser.TokenCross }
	'.'            { Parser.TokenDot }
	','            { Parser.TokenComma }
	'['            { Parser.TokenOpenBrackets }
	']'            { Parser.TokenCloseBrackets }
	'('            { Parser.TokenOpenParenthesis }
	')'            { Parser.TokenCloseParenthesis }
	'{'            { Parser.TokenBegin }
	'}'            { Parser.TokenEnd }
	'<'            { Parser.TokenLess }
	'>'            { Parser.TokenGreater }
	'='            { Parser.TokenEquals }
	'+'            { Parser.TokenPlus }
	'*'            { Parser.TokenTimes }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_read     rule  0
	Program         rules 1, 2
	Statement       rules 3, 4
	Declaration     rules 5, 6, 7, 8, 9, 10
	Rule            rules 11, 12, 13, 14
	Comparison      rules 15, 16, 17
	Conj            rules 18, 19, 20, 21
	Polyadic        rule  22
	LiteralSequence rules 23, 24
	Literal         rules 25, 26
	Atom            rules 27, 28
	TermSequence    rules 29, 30
	Crosses         rules 31, 32
	Term            rules 33, 34, 35, 36

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_read -> . Program                            (rule 0)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	const          shift, and enter state 13
	var            shift, and enter state 14
	let            shift, and enter state 15
	params         shift, and enter state 16
	order          shift, and enter state 17
	'('            shift, and enter state 18

	Program        goto state 19
	Statement      goto state 20
	Declaration    goto state 3
	Rule           goto state 4
	Conj           goto state 5
	Polyadic       goto state 6
	Literal        goto state 7
	Atom           goto state 8
	TermSequence   goto state 9
	Term           goto state 10

State 1

	Program -> . Statement                              (rule 1)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	const          shift, and enter state 13
	var            shift, and enter state 14
	let            shift, and enter state 15
	params         shift, and enter state 16
	order          shift, and enter state 17
	'('            shift, and enter state 18

	Statement      goto state 2
	Declaration    goto state 3
	Rule           goto state 4
	Conj           goto state 5
	Polyadic       goto state 6
	Literal        goto state 7
	Atom           goto state 8
	TermSequence   goto state 9
	Term           goto state 10

State 2

	Program -> Statement .                              (rule 1)



State 3

	Statement -> Declaration .                          (rule 3)

	sep            reduce using rule 3
	%eof           reduce using rule 3


State 4

	Statement -> Rule .                                 (rule 4)

	sep            reduce using rule 4
	%eof           reduce using rule 4


State 5

	Rule -> Conj . arrow bottom                         (rule 11)
	Rule -> Conj . arrow Conj                           (rule 12)
	Rule -> Conj . iff Conj                             (rule 13)
	Rule -> Conj .                                      (rule 14)

	arrow          shift, and enter state 42
	iff            shift, and enter state 43
	sep            reduce using rule 14
	%eof           reduce using rule 14


State 6

	Conj -> Polyadic .                                  (rule 19)
	Conj -> Polyadic . ',' Conj                         (rule 20)

	arrow          reduce using rule 19
	iff            reduce using rule 19
	sep            reduce using rule 19
	','            shift, and enter state 41
	%eof           reduce using rule 19


State 7

	Conj -> Literal .                                   (rule 18)
	Conj -> Literal . ',' Conj                          (rule 21)

	arrow          reduce using rule 18
	iff            reduce using rule 18
	sep            reduce using rule 18
	','            shift, and enter state 40
	%eof           reduce using rule 18


State 8

	Literal -> Atom .                                   (rule 26)

	arrow          reduce using rule 26
	iff            reduce using rule 26
	sep            reduce using rule 26
	','            reduce using rule 26
	'}'            reduce using rule 26
	%eof           reduce using rule 26


State 9

	Polyadic -> TermSequence . '|' '{' LiteralSequence '}'    (rule 22)
	TermSequence -> TermSequence . ',' Term             (rule 30)

	'|'            shift, and enter state 38
	','            shift, and enter state 39


State 10

	Atom -> Term . '(' TermSequence ')'                 (rule 27)
	Atom -> Term . Comparison Term                      (rule 28)
	TermSequence -> Term .                              (rule 29)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	'|'            reduce using rule 29
	'.'            shift, and enter state 32
	','            reduce using rule 29
	'['            shift, and enter state 33
	'('            shift, and enter state 34
	'<'            shift, and enter state 35
	'>'            shift, and enter state 36
	'='            shift, and enter state 37

	Comparison     goto state 31

State 11

	Term -> leaf .                                      (rule 35)

	leaf           reduce using rule 35
	arrow          reduce using rule 35
	iff            reduce using rule 35
	sep            reduce using rule 35
	'|'            reduce using rule 35
	':'            reduce using rule 35
	';'            reduce using rule 35
	'.'            reduce using rule 35
	','            reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'}'            reduce using rule 35
	'<'            reduce using rule 35
	'>'            reduce using rule 35
	'='            reduce using rule 35
	%eof           reduce using rule 35


State 12

	Literal -> not . Atom                               (rule 25)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Atom           goto state 29
	Term           goto state 30

State 13

	Declaration -> const . TermSequence ':' Term        (rule 5)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	TermSequence   goto state 28
	Term           goto state 25

State 14

	Declaration -> var . TermSequence ':' Term          (rule 6)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	TermSequence   goto state 27
	Term           goto state 25

State 15

	Declaration -> let . Term ':' Crosses arrow Term    (rule 7)
	Declaration -> let . Term '=' Term                  (rule 8)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 26

State 16

	Declaration -> params . TermSequence                (rule 9)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	TermSequence   goto state 24
	Term           goto state 25

State 17

	Declaration -> order . Term Term ':' Term           (rule 10)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 23

State 18

	Term -> '(' . Term ')'                              (rule 36)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 22

State 19

	%start_read -> Program .                            (rule 0)

	%eof           accept


State 20

	Program -> Statement .                              (rule 1)
	Program -> Statement . sep Program                  (rule 2)

	sep            shift, and enter state 21
	%eof           reduce using rule 1


State 21

	Program -> Statement sep . Program                  (rule 2)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	const          shift, and enter state 13
	var            shift, and enter state 14
	let            shift, and enter state 15
	params         shift, and enter state 16
	order          shift, and enter state 17
	'('            shift, and enter state 18

	Program        goto state 61
	Statement      goto state 20
	Declaration    goto state 3
	Rule           goto state 4
	Conj           goto state 5
	Polyadic       goto state 6
	Literal        goto state 7
	Atom           goto state 8
	TermSequence   goto state 9
	Term           goto state 10

State 22

	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)
	Term -> '(' Term . ')'                              (rule 36)

	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	')'            shift, and enter state 60


State 23

	Declaration -> order Term . Term ':' Term           (rule 10)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	leaf           shift, and enter state 11
	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	'('            shift, and enter state 18

	Term           goto state 59

State 24

	Declaration -> params TermSequence .                (rule 9)
	TermSequence -> TermSequence . ',' Term             (rule 30)

	sep            reduce using rule 9
	','            shift, and enter state 39
	%eof           reduce using rule 9


State 25

	TermSequence -> Term .                              (rule 29)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	sep            reduce using rule 29
	':'            reduce using rule 29
	'.'            shift, and enter state 32
	','            reduce using rule 29
	'['            shift, and enter state 33
	']'            reduce using rule 29
	')'            reduce using rule 29
	%eof           reduce using rule 29


State 26

	Declaration -> let Term . ':' Crosses arrow Term    (rule 7)
	Declaration -> let Term . '=' Term                  (rule 8)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	':'            shift, and enter state 57
	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	'='            shift, and enter state 58


State 27

	Declaration -> var TermSequence . ':' Term          (rule 6)
	TermSequence -> TermSequence . ',' Term             (rule 30)

	':'            shift, and enter state 56
	','            shift, and enter state 39


State 28

	Declaration -> const TermSequence . ':' Term        (rule 5)
	TermSequence -> TermSequence . ',' Term             (rule 30)

	':'            shift, and enter state 55
	','            shift, and enter state 39


State 29

	Literal -> not Atom .                               (rule 25)

	arrow          reduce using rule 25
	iff            reduce using rule 25
	sep            reduce using rule 25
	','            reduce using rule 25
	'}'            reduce using rule 25
	%eof           reduce using rule 25


State 30

	Atom -> Term . '(' TermSequence ')'                 (rule 27)
	Atom -> Term . Comparison Term                      (rule 28)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	'('            shift, and enter state 34
	'<'            shift, and enter state 35
	'>'            shift, and enter state 36
	'='            shift, and enter state 37

	Comparison     goto state 31

State 31

	Atom -> Term Comparison . Term                      (rule 28)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 54

State 32

	Term -> Term '.' . Term                             (rule 33)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 53

State 33

	Term -> Term '[' . TermSequence ']'                 (rule 34)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	TermSequence   goto state 52
	Term           goto state 25

State 34

	Atom -> Term '(' . TermSequence ')'                 (rule 27)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	TermSequence   goto state 51
	Term           goto state 25

State 35

	Comparison -> '<' .                                 (rule 15)

	leaf           reduce using rule 15
	'('            reduce using rule 15


State 36

	Comparison -> '>' .                                 (rule 16)

	leaf           reduce using rule 16
	'('            reduce using rule 16


State 37

	Comparison -> '=' .                                 (rule 17)

	leaf           reduce using rule 17
	'('            reduce using rule 17


State 38

	Polyadic -> TermSequence '|' . '{' LiteralSequence '}'    (rule 22)

	'{'            shift, and enter state 50


State 39

	TermSequence -> TermSequence ',' . Term             (rule 30)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 49

State 40

	Conj -> Literal ',' . Conj                          (rule 21)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	'('            shift, and enter state 18

	Conj           goto state 48
	Polyadic       goto state 6
	Literal        goto state 7
	Atom           goto state 8
	TermSequence   goto state 9
	Term           goto state 10

State 41

	Conj -> Polyadic ',' . Conj                         (rule 20)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	'('            shift, and enter state 18

	Conj           goto state 47
	Polyadic       goto state 6
	Literal        goto state 7
	Atom           goto state 8
	TermSequence   goto state 9
	Term           goto state 10

State 42

	Rule -> Conj arrow . bottom                         (rule 11)
	Rule -> Conj arrow . Conj                           (rule 12)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	bottom         shift, and enter state 46
	'('            shift, and enter state 18

	Conj           goto state 45
	Polyadic       goto state 6
	Literal        goto state 7
	Atom           goto state 8
	TermSequence   goto state 9
	Term           goto state 10

State 43

	Rule -> Conj iff . Conj                             (rule 13)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	'('            shift, and enter state 18

	Conj           goto state 44
	Polyadic       goto state 6
	Literal        goto state 7
	Atom           goto state 8
	TermSequence   goto state 9
	Term           goto state 10

State 44

	Rule -> Conj iff Conj .                             (rule 13)

	sep            reduce using rule 13
	%eof           reduce using rule 13


State 45

	Rule -> Conj arrow Conj .                           (rule 12)

	sep            reduce using rule 12
	%eof           reduce using rule 12


State 46

	Rule -> Conj arrow bottom .                         (rule 11)

	sep            reduce using rule 11
	%eof           reduce using rule 11


State 47

	Conj -> Polyadic ',' Conj .                         (rule 20)

	arrow          reduce using rule 20
	iff            reduce using rule 20
	sep            reduce using rule 20
	%eof           reduce using rule 20


State 48

	Conj -> Literal ',' Conj .                          (rule 21)

	arrow          reduce using rule 21
	iff            reduce using rule 21
	sep            reduce using rule 21
	%eof           reduce using rule 21


State 49

	TermSequence -> TermSequence ',' Term .             (rule 30)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	sep            reduce using rule 30
	'|'            reduce using rule 30
	':'            reduce using rule 30
	'.'            shift, and enter state 32
	','            reduce using rule 30
	'['            shift, and enter state 33
	']'            reduce using rule 30
	')'            reduce using rule 30
	%eof           reduce using rule 30


State 50

	Polyadic -> TermSequence '|' '{' . LiteralSequence '}'    (rule 22)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	'('            shift, and enter state 18

	LiteralSequencegoto state 70
	Literal        goto state 71
	Atom           goto state 8
	Term           goto state 30

State 51

	Atom -> Term '(' TermSequence . ')'                 (rule 27)
	TermSequence -> TermSequence . ',' Term             (rule 30)

	','            shift, and enter state 39
	')'            shift, and enter state 69


State 52

	TermSequence -> TermSequence . ',' Term             (rule 30)
	Term -> Term '[' TermSequence . ']'                 (rule 34)

	','            shift, and enter state 39
	']'            shift, and enter state 68


State 53

	Term -> Term . '.' Term                             (rule 33)
	Term -> Term '.' Term .                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	leaf           reduce using rule 33
	arrow          reduce using rule 33
	iff            reduce using rule 33
	sep            reduce using rule 33
	'|'            reduce using rule 33
	':'            reduce using rule 33
	';'            reduce using rule 33
	'.'            shift, and enter state 32
	','            reduce using rule 33
	'['            shift, and enter state 33
			(reduce using rule 33)

	']'            reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'}'            reduce using rule 33
	'<'            reduce using rule 33
	'>'            reduce using rule 33
	'='            reduce using rule 33
	%eof           reduce using rule 33


State 54

	Atom -> Term Comparison Term .                      (rule 28)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	arrow          reduce using rule 28
	iff            reduce using rule 28
	sep            reduce using rule 28
	'.'            shift, and enter state 32
	','            reduce using rule 28
	'['            shift, and enter state 33
	'}'            reduce using rule 28
	%eof           reduce using rule 28


State 55

	Declaration -> const TermSequence ':' . Term        (rule 5)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 67

State 56

	Declaration -> var TermSequence ':' . Term          (rule 6)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 66

State 57

	Declaration -> let Term ':' . Crosses arrow Term    (rule 7)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Crosses        goto state 64
	Term           goto state 65

State 58

	Declaration -> let Term '=' . Term                  (rule 8)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 63

State 59

	Declaration -> order Term Term . ':' Term           (rule 10)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	':'            shift, and enter state 62
	'.'            shift, and enter state 32
	'['            shift, and enter state 33


State 60

	Term -> '(' Term ')' .                              (rule 36)

	leaf           reduce using rule 36
	arrow          reduce using rule 36
	iff            reduce using rule 36
	sep            reduce using rule 36
	'|'            reduce using rule 36
	':'            reduce using rule 36
	';'            reduce using rule 36
	'.'            reduce using rule 36
	','            reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'}'            reduce using rule 36
	'<'            reduce using rule 36
	'>'            reduce using rule 36
	'='            reduce using rule 36
	%eof           reduce using rule 36


State 61

	Program -> Statement sep Program .                  (rule 2)

	%eof           reduce using rule 2


State 62

	Declaration -> order Term Term ':' . Term           (rule 10)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 76

State 63

	Declaration -> let Term '=' Term .                  (rule 8)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	sep            reduce using rule 8
	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	%eof           reduce using rule 8


State 64

	Declaration -> let Term ':' Crosses . arrow Term    (rule 7)
	Crosses -> Crosses . ';' Term                       (rule 32)

	arrow          shift, and enter state 74
	';'            shift, and enter state 75


State 65

	Crosses -> Term .                                   (rule 31)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	arrow          reduce using rule 31
	';'            reduce using rule 31
	'.'            shift, and enter state 32
	'['            shift, and enter state 33


State 66

	Declaration -> var TermSequence ':' Term .          (rule 6)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	sep            reduce using rule 6
	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	%eof           reduce using rule 6


State 67

	Declaration -> const TermSequence ':' Term .        (rule 5)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	sep            reduce using rule 5
	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	%eof           reduce using rule 5


State 68

	Term -> Term '[' TermSequence ']' .                 (rule 34)

	leaf           reduce using rule 34
	arrow          reduce using rule 34
	iff            reduce using rule 34
	sep            reduce using rule 34
	'|'            reduce using rule 34
	':'            reduce using rule 34
	';'            reduce using rule 34
	'.'            reduce using rule 34
	','            reduce using rule 34
	'['            reduce using rule 34
	']'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'}'            reduce using rule 34
	'<'            reduce using rule 34
	'>'            reduce using rule 34
	'='            reduce using rule 34
	%eof           reduce using rule 34


State 69

	Atom -> Term '(' TermSequence ')' .                 (rule 27)

	arrow          reduce using rule 27
	iff            reduce using rule 27
	sep            reduce using rule 27
	','            reduce using rule 27
	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 70

	Polyadic -> TermSequence '|' '{' LiteralSequence . '}'    (rule 22)

	'}'            shift, and enter state 73


State 71

	LiteralSequence -> Literal .                        (rule 23)
	LiteralSequence -> Literal . ',' LiteralSequence    (rule 24)

	','            shift, and enter state 72
	'}'            reduce using rule 23


State 72

	LiteralSequence -> Literal ',' . LiteralSequence    (rule 24)

	leaf           shift, and enter state 11
	not            shift, and enter state 12
	'('            shift, and enter state 18

	LiteralSequencegoto state 79
	Literal        goto state 71
	Atom           goto state 8
	Term           goto state 30

State 73

	Polyadic -> TermSequence '|' '{' LiteralSequence '}' .    (rule 22)

	arrow          reduce using rule 22
	iff            reduce using rule 22
	sep            reduce using rule 22
	','            reduce using rule 22
	%eof           reduce using rule 22


State 74

	Declaration -> let Term ':' Crosses arrow . Term    (rule 7)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 78

State 75

	Crosses -> Crosses ';' . Term                       (rule 32)

	leaf           shift, and enter state 11
	'('            shift, and enter state 18

	Term           goto state 77

State 76

	Declaration -> order Term Term ':' Term .           (rule 10)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	sep            reduce using rule 10
	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	%eof           reduce using rule 10


State 77

	Crosses -> Crosses ';' Term .                       (rule 32)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	arrow          reduce using rule 32
	';'            reduce using rule 32
	'.'            shift, and enter state 32
	'['            shift, and enter state 33


State 78

	Declaration -> let Term ':' Crosses arrow Term .    (rule 7)
	Term -> Term . '.' Term                             (rule 33)
	Term -> Term . '[' TermSequence ']'                 (rule 34)

	sep            reduce using rule 7
	'.'            shift, and enter state 32
	'['            shift, and enter state 33
	%eof           reduce using rule 7


State 79

	LiteralSequence -> Literal ',' LiteralSequence .    (rule 24)

	'}'            reduce using rule 24


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 37
Number of terminals: 28
Number of non-terminals: 14
Number of states: 80
